feedback form refactoring for unauthorized user
